--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/calendar
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=omar135790864
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.error.include-message=always
 
