login using github

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
+
+spring.security.oauth2.client.registration.github.client-id = 9d36ebffd5e7fefeb015
+spring.security.oauth2.client.registration.github.client-secret = faf2d086bf7f7c69bc57a9c469daac447dd9f488
+
